nuevos mensajes modificados para aceptar internacionalizacion

--- a/src/main/resources/i18n/mensajes.properties
+++ b/src/main/resources/i18n/mensajes.properties
@@ -1,3 +1,6 @@
+add_cart_message=Agregar a carrito
+back_to_list_message=Back to lista
+historial_message=Historial de ventas
+login_buy_message=Haz login para comprar
 login_form_message=Logging In
-prueba=ban truska
-prueba2=ban ban ban
+to_cart_message=Ir al cart
