--- a/src/main/resources/i18n/mensajes_en.properties
+++ b/src/main/resources/i18n/mensajes_en.properties
@@ -1,3 +1,6 @@
+add_cart_message=Add to cart
+back_to_list_message=Back to product list
+historial_message=Product's sales history
+login_buy_message=Must be logued in to process cart
 login_form_message=Log In
-prueba=waddup boy
-prueba2=u wut m8
+to_cart_message=Go to cart
