--- a/src/main/resources/i18n/mensajes_es.properties
+++ b/src/main/resources/i18n/mensajes_es.properties
@@ -1,3 +1,6 @@
+add_cart_message=Agregar al carrito
+back_to_list_message=Volver a lista
+historial_message=Historial de ventas de un producto
+login_buy_message=Inicia sesion para procesar compra
 login_form_message=Inicio de Sesion
-prueba=klk manitoh
-prueba2=dime a ver mi loco
+to_cart_message=Ir a carrito
