#11 terminado, grafico pie por porcentaje de venta, grafico barra monto total por dia

--- a/src/main/resources/i18n/mensajes.properties
+++ b/src/main/resources/i18n/mensajes.properties
@@ -3,4 +3,6 @@ back_to_list_message=Back to lista
 historial_message=Historial de ventas
 login_buy_message=Haz login para comprar
 login_form_message=Logging In
+productos_disponibles_message=Productos availables
 to_cart_message=Ir al cart
+to_dashboard_message=Ir al dashboard
