--- a/src/main/resources/i18n/mensajes_en.properties
+++ b/src/main/resources/i18n/mensajes_en.properties
@@ -3,4 +3,6 @@ back_to_list_message=Back to product list
 historial_message=Product's sales history
 login_buy_message=Must be logued in to process cart
 login_form_message=Log In
+productos_disponibles_message=Available products
 to_cart_message=Go to cart
+to_dashboard_message=Go to dashboard
