--- a/src/main/resources/i18n/mensajes_es.properties
+++ b/src/main/resources/i18n/mensajes_es.properties
@@ -3,4 +3,6 @@ back_to_list_message=Volver a lista
 historial_message=Historial de ventas de un producto
 login_buy_message=Inicia sesion para procesar compra
 login_form_message=Inicio de Sesion
+productos_disponibles_message=Productos disponibles
 to_cart_message=Ir a carrito
+to_dashboard_message=Ver graficos
